Remove stray option